# libffwd-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ffwd-client-send/: CMakeLists.txt  ffwd-client-send.cpp
proto/: protocol0.proto
src/: ffwd.cpp  ffwd.hpp
src/proto/: protocol0.pb.cc  protocol0.pb.h
tools/: build-protobuf
