CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
INCLUDE(FindProtobuf)

SET(VERSION 0.0.1)

SET(CMAKE_PROJECT_NAME "ffwd-client")

SET(FFWD_CLIENT_SOURCES
    src/ffwd.cpp
    src/proto/protocol0.pb.cc
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

FIND_PACKAGE(Protobuf REQUIRED)

SET(FFWD_CLIENT_LIBRARIES
    ${PROTOBUF_LIBRARY}
)

ADD_LIBRARY(ffwd-client-static ${FFWD_CLIENT_SOURCES})
SET_TARGET_PROPERTIES(ffwd-client-static PROPERTIES OUTPUT_NAME ffwd-client)
ADD_LIBRARY(ffwd-client SHARED ${FFWD_CLIENT_SOURCES})
SET_TARGET_PROPERTIES(ffwd-client PROPERTIES SOVERSION 0 VERSION ${VERSION})

TARGET_LINK_LIBRARIES(ffwd-client-static ${FFWD_CLIENT_LIBRARIES})
TARGET_LINK_LIBRARIES(ffwd-client ${FFWD_CLIENT_LIBRARIES})

INSTALL(FILES src/ffwd.hpp DESTINATION include)
INSTALL(TARGETS ffwd-client ffwd-client-static
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

ADD_SUBDIRECTORY(ffwd-client-send)
